Replaced MemEvent by an interface MemoryEvent. The old MemEvent class is now AbstractMemoryEvent.